Revision history for Perl extension BZ::Client.

    - FlagType.pm: added
    - API.pm: mmake _create a little more flexible

2.0_9 Saturday Oct 10 00:24:00 2015
    - API.pm: moved create() functions in
    - API.pm: moved update() like functions in
    - Group.pm: added

2.0_8 Thursday Oct 1 00:02:00 2015
    - Component.pm: added.
    - Comment.pm: removed duplicate sub text()

2.0_7 Wednesday Sep 30 00:39::00 2015
    - Classification.pm: added.

2.0_6 Tuesday Sep 29 23:56:00 2015
    - XMLRPC.pm: pass through options to HTTP::Tiny
    - Client.pm: facilitate pass through options to HTTP::Tiny
    - Product.pm: changes to the methods and pod
    - Product.pm: add create() and update() functions

2.0_5 Friday Sep 25 01:11:00 2015
    - Bug.pm: minor changes
    - Bugzilla.pm: add last_audit_time()
    - Bugzilla.pm: add parameters()
    - Bugzilla.pm: adjust version()
    - Bugzilla.pm: overhaul extensions()
    - Bugzilla.pm: adjust time()

2.0_4 Thursday Sep 24 01:35:00 2015
    - Attachment.pm: update() method and pod
    - Comment.pm: lots of pod and render() function

2.0_3 Tuesday Sep 22 09:47:00 2015
    - Implement the api_key properly
    - Bug.pm: handle alias() better (i.e. properly)
    - Replace use+@ISA with 'use parent'
    - Bug.pm: added history() and possible_duplicates()
    - Initial commit of Bugs/Attachment.pm
    - Initial commit of Bugs/Comment.pm
    - API.pm: move new() in here to be reused
    - Use __PACKAGE__ all around the place

2.0_001 Thursday Sep 17 10:42:00 2015
    - let's make this thing sane....
    - lots and lots of pod improvements
    - wantarray sensitivity all around the place
    - Bug.pm: add fields() function
    - XMLRPC.pm: dispatch table used rather than by if/elsif/else
    - XMLRPC.pm: replace 'use constants' and make singleton-ish
    - XMLRPC.pm: 'use' rather than 'require'
    - XMLRPC.pm: use HTTP::Tiny instead of LWP
    - Client.pm: use HTTP::CookieJar instead of HTTP::Cookies