@@ -2,6 +2,7 @@ Revision history for Perl extension BZ::Client.
 
     - FlagType.pm: added
     - API.pm: mmake _create a little more flexible
+    - BugUserLastVisit.pm: added
 
 2.0_9 Saturday Oct 10 00:24:00 2015
     - API.pm: moved create() functions in
